# featurecheck

./: README.md  pyproject.toml
src/featurecheck/: __init__.py  core.py
tests/: test_core.py
